[tool.poetry]
name = "nul-dc-api"
version = "0.1.0"
description = ""
authors = ["David Schober <davidschob@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
unicodecsv = "^0.14.1"
elasticsearch = "^7.9.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dc2csv = 'nul_dc_api.commandline:dc2csv'
