[tool.poetry]
name = "nuldcapi"
version = "0.1.0"
description = ""
authors = ["David Schober <davidschob@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
unicodecsv = "^0.14.1"
elasticsearch = "^7.9.1"
docopt = "^0.6.2"
dicttoxml = "^1.7.4"
pep8 = "^1.7.1"
autopep8 = "^1.5.7"
ipython = "^7.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dc2csv = 'nuldcapi.commandline:dc2csv'
dcfilesmatch = 'nuldcapi.commandline:dcfilesmatch'
dc2xml = 'nuldcapi.commandline:dc2xml'

